--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Raw content
 
 # Short bio or description (displayed in the header)
-description: Machine learning
+description: Machine learning + data abstraction
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
